# serializer version: 1
# name: test_document_as_of
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalStringAnswer',
              'historyType': '+',
              'historyUserId': 'admin',
              'value': 'first admin - revision 1',
            }),
          }),
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_document_as_of.1
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalStringAnswer',
              'historyType': '~',
              'historyUserId': 'AnonymousUser',
              'value': 'first anon - revision 3',
            }),
          }),
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_document_as_of.2
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalStringAnswer',
              'historyType': '~',
              'historyUserId': 'AnonymousUser',
              'value': 'second anon - revision 4',
            }),
          }),
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_document_as_of.3
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalStringAnswer',
              'historyType': '-',
              'historyUserId': 'AnonymousUser',
              'value': 'second anon - revision 4',
            }),
          }),
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_document_as_of.4
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_document_as_of.5
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalStringAnswer',
              'historyType': '-',
              'historyUserId': 'AnonymousUser',
              'value': 'second anon - revision 4',
            }),
          }),
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_document_as_of.6
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_historical_table_answer[False]
  dict({
    'd1': dict({
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalTableAnswer',
              'historyType': '+',
              'value': list([
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '+',
                          'value': 'first row value',
                        }),
                      }),
                    ]),
                  }),
                  'historyType': '+',
                }),
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '+',
                          'value': 'second row value',
                        }),
                      }),
                    ]),
                  }),
                  'historyType': '+',
                }),
              ]),
            }),
          }),
        ]),
      }),
      'historyType': '+',
    }),
    'd2': dict({
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalTableAnswer',
              'historyType': '+',
              'value': list([
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '+',
                          'value': 'first row value',
                        }),
                      }),
                    ]),
                  }),
                  'historyType': '+',
                }),
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '-',
                          'value': 'second row value',
                        }),
                      }),
                    ]),
                  }),
                  'historyType': '-',
                }),
              ]),
            }),
          }),
        ]),
      }),
      'historyType': '+',
    }),
  })
# ---
# name: test_historical_table_answer[True]
  dict({
    'd1': dict({
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalTableAnswer',
              'historyType': '+',
              'value': list([
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '+',
                          'value': 'first row value',
                        }),
                      }),
                    ]),
                  }),
                  'historyType': '+',
                }),
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '+',
                          'value': 'second row value',
                        }),
                      }),
                    ]),
                  }),
                  'historyType': '+',
                }),
              ]),
            }),
          }),
        ]),
      }),
      'historyType': '+',
    }),
    'd2': dict({
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalTableAnswer',
              'historyType': '+',
              'value': list([
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '+',
                          'value': 'first row value',
                        }),
                      }),
                    ]),
                  }),
                  'historyType': '+',
                }),
              ]),
            }),
          }),
        ]),
      }),
      'historyType': '+',
    }),
  })
# ---
